# CAOS

./: README.md
cont1/: task1.sh  task2.sh
cont10/t0/: main.c
cont10/t1/: main.c
cont10/t2/: main.c
cont11/t0/: main.c
cont11/t1/: main.c
cont11/t2/: main.c
cont12/: t0.c  t1.c
cont13/: t0.c  t1.c  t2.c
cont14/: t0.c  t1.c  t2.c
cont15/: t0.c  t1.c  t2.c  t3.c
cont16/: ping-pong-test.c  t0.c  t1.c  t2.c  t3.c
cont17/: README.md  t0.c  t1.c  t2.c
cont18/: t0.c  t1.c  t2.c
cont19/: t0.c  t1.c
cont2/t0/: CMakeLists.txt  main.c
cont2/t1/: main.c
cont2/t2/: CMakeLists.txt  main.c
cont2/t3/: CMakeLists.txt  main.c
cont2/t4/: CMakeLists.txt  main.c
cont20/: t0.c  t1.c  t2.c
cont21/: t0.c  t1.c
cont22/: requirements.txt
cont22/t0/: CMakeLists.txt  README.md  main.c  src
cont22/t1/: CMakeLists.txt  README.md  main.c  test.c
cont22/t1/dir1/: same_name
cont22/t1/dir1/subdir/: same_subdir  unique
cont22/t1/dir2/: same_name
cont22/t1/dir2/subdir/: same_subdir  some_file
cont23/t0/: README.md  main.c
cont23/t1/: README.md  interfaces.h  main.cpp
cont3/: t1.S  t2.S  t3.S
cont4/: .t2.S.swp  t1.S  t2.S  t3.S  t4.S
cont5/: .t0,S.swp  .t1.S.swp  t0.S  t1.S  test.c
cont6/: t0.S  t1.S  t2.S  t3.c
cont7/: t0.c  t1.c  t2.S
cont8/t0/: main.c
cont8/t1/: main.c
cont8/t3/: main.c
cont9/t0/: main.c
cont9/t1/: exec_correct_ELF  exec_incorrect_ELF  exec_incorrect_shabang  exec_without_shabang  main.c
cont9/t2/: main.c
cont9/t3/: main.c
